@@ -1233,46 +1233,69 @@ class ApplicationServiceTest {
         }
 
         @Test
-        @DisplayName("Final Sonar Fix: Cover all true/false branches for services and results")
-        void finalSonarFixTest() {
-            ApplicationCreateDto appWithServices = ApplicationCreateDto.builder()
-                .plateNumber("1111 AA-1")
-                .serviceIds(List.of(1L))
-                .build();
+        @DisplayName("Cover all services and serviceIds branches")
+        void shouldCoverAllServicesAndServiceIdsBranches() {
+            AdditionalService service1 = AdditionalService.builder().id(1L).price(BigDecimal.valueOf(50)).build();
+            AdditionalService service2 = AdditionalService.builder().id(2L).price(BigDecimal.valueOf(30)).build();
 
-            ApplicationCreateDto appWithoutServices = ApplicationCreateDto.builder()
-                .plateNumber("2222 AA-2")
-                .serviceIds(Collections.emptyList())
+            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
+            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
+            when(serviceRepository.findAllById(anyList())).thenReturn(List.of(service1, service2));
+            when(applicationRepository.save(any(Application.class))).thenAnswer(i -> i.getArgument(0));
+            when(applicationMapper.toDto(any(Application.class))).thenReturn(testApplicationDto);
+
+            applicationService.createApplication(testCreateDto);
+
+            verify(serviceRepository, times(1)).findAllById(anyList());
+            verify(applicationRepository, times(2)).save(any(Application.class));
+
+            ApplicationCreateDto bulkApp1 = ApplicationCreateDto.builder()
+                .passportNumber("MP1234567")
+                .plateNumber("1234 AB-7")
+                .serviceIds(null)
+                .build();
+            ApplicationCreateDto bulkApp2 = ApplicationCreateDto.builder()
+                .passportNumber("MP1234567")
+                .plateNumber("5678 CD-9")
+                .serviceIds(null)
                 .build();
 
             BulkApplicationCreateDto bulkDto = BulkApplicationCreateDto.builder()
-                .passportNumber(testApplicant.getPassportNumber())
-                .applications(List.of(appWithServices, appWithoutServices))
+                .passportNumber("MP1234567")
+                .applications(List.of(bulkApp1, bulkApp2))
                 .build();
 
-            AdditionalService mockService = AdditionalService.builder().id(1L).price(BigDecimal.TEN).build();
+            LicensePlate plate2 = LicensePlate.builder()
+                .id(2L)
+                .plateNumber("5678 CD-9")
+                .price(BigDecimal.valueOf(150))
+                .department(testDept)
+                .applications(new ArrayList<>())
+                .build();
 
-            when(applicantRepository.findByPassportNumber(anyString())).thenReturn(Optional.of(testApplicant));
-            when(licensePlateRepository.findByPlateNumber(anyString())).thenReturn(Optional.of(testPlate));
+            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
+            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
+            when(licensePlateRepository.findByPlateNumber("5678 CD-9")).thenReturn(Optional.of(plate2));
 
-            when(serviceRepository.findAllById(List.of(1L))).thenReturn(List.of(mockService));
-            when(serviceRepository.findAllById(Collections.emptyList())).thenReturn(Collections.emptyList());
+            BulkApplicationResult result = applicationService.createBulkApplicationsWithoutTransaction(bulkDto);
 
-            when(applicationRepository.save(any(Application.class))).thenAnswer(i -> i.getArgument(0));
-            when(applicationMapper.toDto(any())).thenReturn(testApplicationDto);
-
-            applicationService.createBulkApplicationsWithoutTransaction(bulkDto);
-
+            assertThat(result.getSuccessful()).isEqualTo(2);
             verify(cacheService, atLeastOnce()).invalidate();
 
-            BulkApplicationCreateDto emptyBulk = BulkApplicationCreateDto.builder()
-                .passportNumber(testApplicant.getPassportNumber())
-                .applications(Collections.emptyList())
+            ApplicationCreateDto singleAppWithServices = ApplicationCreateDto.builder()
+                .passportNumber("MP1234567")
+                .plateNumber("1234 AB-7")
+                .serviceIds(List.of(1L, 2L))
                 .build();
 
-            applicationService.createBulkApplicationsWithoutTransaction(emptyBulk);
+            BulkApplicationCreateDto singleBulkDto = BulkApplicationCreateDto.builder()
+                .passportNumber("MP1234567")
+                .applications(List.of(singleAppWithServices))
+                .build();
 
-            appWithServices.setServiceIds(null);
+            applicationService.createBulkApplicationsWithoutTransaction(singleBulkDto);
+
+            verify(applicationRepository, atLeast(2)).save(any(Application.class));
         }
 
         @Test
@@ -1349,34 +1372,6 @@ class ApplicationServiceTest {
         }
 
         @Test
-        @DisplayName("Should save services in createSingleApplication")
-        void shouldSaveServicesInCreateSingleApplication() {
-            AdditionalService service1 = AdditionalService.builder().id(1L).price(BigDecimal.valueOf(50)).build();
-            AdditionalService service2 = AdditionalService.builder().id(2L).price(BigDecimal.valueOf(30)).build();
-
-            ApplicationCreateDto app1 = ApplicationCreateDto.builder()
-                .passportNumber("MP1234567")
-                .plateNumber("1234 AB-7")
-                .serviceIds(List.of(1L, 2L))
-                .build();
-
-            BulkApplicationCreateDto bulkDto = BulkApplicationCreateDto.builder()
-                .passportNumber("MP1234567")
-                .applications(List.of(app1))
-                .build();
-
-            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
-            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
-            when(serviceRepository.findAllById(anyList())).thenReturn(List.of(service1, service2));
-            when(applicationRepository.save(any(Application.class))).thenReturn(testApplication);
-            when(applicationMapper.toDto(any(Application.class))).thenReturn(testApplicationDto);
-
-            applicationService.createBulkApplicationsWithoutTransaction(bulkDto);
-
-            verify(applicationRepository, times(2)).save(any(Application.class));
-        }
-
-        @Test
         @DisplayName("Should set CONFIRMED status when transactional in bulk")
         void shouldSetConfirmedStatusWhenTransactional() {
             ApplicationCreateDto app1 = ApplicationCreateDto.builder()
@@ -1431,63 +1426,6 @@ class ApplicationServiceTest {
         }
 
         @Test
-        @DisplayName("Should invalidate cache when empty result in cached method")
-        void shouldInvalidateCacheWhenEmptyResult() {
-            when(cacheService.get("PENDING", "MINSK")).thenReturn(Collections.emptyList());
-
-            List<ApplicationDto> result = applicationService.getApplicationsByStatusAndRegionCached(
-                ApplicationStatus.PENDING, "MINSK");
-
-            assertThat(result).isEmpty();
-            verify(cacheService).invalidate();
-        }
-
-        @Test
-        @DisplayName("Should log when no applications but applicant exists")
-        void shouldLogWhenNoApplicationsButApplicantExists() {
-            when(applicationRepository.findByApplicantPassport("MP1234567")).thenReturn(Collections.emptyList());
-            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
-            when(applicationMapper.toDtoList(Collections.emptyList())).thenReturn(Collections.emptyList());
-
-            List<ApplicationDto> result = applicationService.getApplicationsByPassport("MP1234567");
-
-            assertThat(result).isEmpty();
-        }
-
-        @Test
-        @DisplayName("Should call expireApplication when reservation expired")
-        void shouldCallExpireApplication() {
-            testApplication.setStatus(ApplicationStatus.PENDING);
-            testApplication.setReservedUntil(LocalDateTime.now().minusHours(1));
-
-            when(applicationRepository.findById(1L)).thenReturn(Optional.of(testApplication));
-            when(applicationRepository.save(testApplication)).thenReturn(testApplication);
-
-            assertThatThrownBy(() -> applicationService.confirmApplication(1L))
-                .isInstanceOf(BusinessException.class);
-
-            verify(applicationRepository, times(1)).save(testApplication);
-            assertThat(testApplication.getStatus()).isEqualTo(ApplicationStatus.EXPIRED);
-        }
-
-        @Test
-        @DisplayName("Should save services in createApplicationInternal")
-        void shouldSaveServicesInCreateApplicationInternal() {
-            AdditionalService service1 = AdditionalService.builder().id(1L).price(BigDecimal.valueOf(50)).build();
-            AdditionalService service2 = AdditionalService.builder().id(2L).price(BigDecimal.valueOf(30)).build();
-
-            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
-            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
-            when(serviceRepository.findAllById(anyList())).thenReturn(List.of(service1, service2));
-            when(applicationRepository.save(any(Application.class))).thenReturn(testApplication);
-            when(applicationMapper.toDto(testApplication)).thenReturn(testApplicationDto);
-
-            applicationService.createApplication(testCreateDto);
-
-            verify(applicationRepository, times(2)).save(any(Application.class));
-        }
-
-        @Test
         @DisplayName("Should cover else branch for isPlateAvailable in createApplicationInternal")
         void shouldCoverElseBranchForIsPlateAvailable() {
             ApplicationCreateDto dto = ApplicationCreateDto.builder()
@@ -1506,9 +1444,9 @@ class ApplicationServiceTest {
         }
 
         @Test
-        @DisplayName("Should cover getServices method when serviceIds is null")
-        void shouldCoverGetServicesWhenServiceIdsNull() {
-            ApplicationCreateDto dto = ApplicationCreateDto.builder()
+        @DisplayName("Should cover getServices method when serviceIds is null or empty")
+        void shouldCoverGetServicesWhenServiceIdsNullOrEmpty() {
+            ApplicationCreateDto dtoNull = ApplicationCreateDto.builder()
                 .passportNumber("MP1234567")
                 .plateNumber("1234 AB-7")
                 .serviceIds(null)
@@ -1519,29 +1457,17 @@ class ApplicationServiceTest {
             when(applicationRepository.save(any(Application.class))).thenReturn(testApplication);
             when(applicationMapper.toDto(testApplication)).thenReturn(testApplicationDto);
 
-            ApplicationDto result = applicationService.createApplication(dto);
-
+            ApplicationDto result = applicationService.createApplication(dtoNull);
             assertThat(result).isEqualTo(testApplicationDto);
             verify(serviceRepository, never()).findAllById(anyList());
-        }
 
-        @Test
-        @DisplayName("Should cover getServices method when serviceIds is empty")
-        void shouldCoverGetServicesWhenServiceIdsEmpty() {
-            ApplicationCreateDto dto = ApplicationCreateDto.builder()
+            ApplicationCreateDto dtoEmpty = ApplicationCreateDto.builder()
                 .passportNumber("MP1234567")
                 .plateNumber("1234 AB-7")
                 .serviceIds(Collections.emptyList())
                 .build();
 
-            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
-            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
-            when(applicationRepository.save(any(Application.class))).thenReturn(testApplication);
-            when(applicationMapper.toDto(testApplication)).thenReturn(testApplicationDto);
-
-            ApplicationDto result = applicationService.createApplication(dto);
-
-            assertThat(result).isEqualTo(testApplicationDto);
+            applicationService.createApplication(dtoEmpty);
             verify(serviceRepository, never()).findAllById(anyList());
         }
 
@@ -1621,10 +1547,7 @@ class ApplicationServiceTest {
 
         @ParameterizedTest
         @DisplayName("Should cover pagination with empty page")
-        @CsvSource({
-            "0, Should log when page is 0 and empty",
-            "1, Should not log when page is not 0 and empty"
-        })
+        @CsvSource({"0", "1"})
         void shouldCoverPaginationWithEmptyPage(int pageNumber) {
             Pageable pageable = PageRequest.of(pageNumber, 10);
             Page<Application> emptyPage = new PageImpl<>(Collections.emptyList(), pageable, 0);
@@ -1635,55 +1558,6 @@ class ApplicationServiceTest {
             Page<ApplicationDto> result = applicationService.getApplicationsByPassportPaginated("MP1234567", pageable);
 
             assertThat(result.getContent()).isEmpty();
-        }
-
-        @Test
-        @DisplayName("Should cover serviceIds not null and not empty branch in createApplicationInternal")
-        void shouldCoverServiceIdsNotNullAndNotEmptyInCreateApplicationInternal() {
-            AdditionalService service1 = AdditionalService.builder().id(1L).price(BigDecimal.valueOf(50)).build();
-            AdditionalService service2 = AdditionalService.builder().id(2L).price(BigDecimal.valueOf(30)).build();
-
-            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
-            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
-            when(serviceRepository.findAllById(anyList())).thenReturn(List.of(service1, service2));
-            when(applicationRepository.save(any(Application.class))).thenReturn(testApplication);
-            when(applicationMapper.toDto(testApplication)).thenReturn(testApplicationDto);
-
-            applicationService.createApplication(testCreateDto);
-
-            verify(serviceRepository, times(1)).findAllById(List.of(1L, 2L));
-        }
-
-        @Test
-        @DisplayName("Should cover services not null and not empty branch in createSingleApplication")
-        void shouldCoverServicesNotNullAndNotEmptyInCreateSingleApplication() {
-            AdditionalService service1 = AdditionalService.builder().id(1L).price(BigDecimal.valueOf(50)).build();
-            AdditionalService service2 = AdditionalService.builder().id(2L).price(BigDecimal.valueOf(30)).build();
-
-            ApplicationCreateDto app1 = ApplicationCreateDto.builder()
-                .passportNumber("MP1234567")
-                .plateNumber("1234 AB-7")
-                .serviceIds(List.of(1L, 2L))
-                .build();
-
-            BulkApplicationCreateDto bulkDto = BulkApplicationCreateDto.builder()
-                .passportNumber("MP1234567")
-                .applications(List.of(app1))
-                .build();
-
-            ArgumentCaptor<Application> applicationCaptor = ArgumentCaptor.forClass(Application.class);
-
-            when(applicantRepository.findByPassportNumber("MP1234567")).thenReturn(Optional.of(testApplicant));
-            when(licensePlateRepository.findByPlateNumber("1234 AB-7")).thenReturn(Optional.of(testPlate));
-            when(serviceRepository.findAllById(anyList())).thenReturn(List.of(service1, service2));
-            when(applicationRepository.save(applicationCaptor.capture())).thenReturn(testApplication);
-            when(applicationMapper.toDto(any(Application.class))).thenReturn(testApplicationDto);
-
-            applicationService.createBulkApplicationsWithoutTransaction(bulkDto);
-
-                        verify(applicationRepository, times(2)).save(any(Application.class));
-
-            verify(serviceRepository, times(1)).findAllById(anyList());
         }
     }
 }
